# godot-kafka-multiplayer-peer

./: .gitignore  CMakeLists.txt  Cargo.toml  open.bat
demo/backend/edge-service/: README.md
demo/backend/edge-service/rust-example/src/: main.rs
demo/backend/edge-service/rust-example/src/api/: client.rs  loadbalancer.rs  server.rs
demo/backend/edge-service/rust-example/src/api/loadbalancers/: leastconnectionsroundrobin.rs  mod.rs  roundrobin.rs
demo/client/scenes/: Init.tscn
demo/client/scripts/: network_manager.gd  who_am_i.gd
demo/server/rust-example/: .gitignore  Cargo.toml
demo/server/rust-example/src/api/: mod.rs
demo/server/rust-example/src/api/loadbalancers/: leastconnections.rs
